fix button alignment

--- a/src/components/MobileNav/MobileNav.module.css
+++ b/src/components/MobileNav/MobileNav.module.css
@@ -17,6 +17,9 @@
   height: 50px;
 }
 
+.icon a {
+  display: flex;
+}
 @media screen and (min-width: 991.98px) {
   .icon,
   .mobileMenu {
